@@ -2,7 +2,6 @@
 --URGENT--
 
 * default ip address issue
-* universe not created when a single client sends (make sense really)
 
 --REQUIRED--
 
