@@ -5,7 +5,7 @@ AC_PREREQ(2.57)
 AC_INIT(configure.in)
 AC_CONFIG_AUX_DIR(config)
 AM_CONFIG_HEADER(config.h)
-AM_INIT_AUTOMAKE(lla, 0.2.1)
+AM_INIT_AUTOMAKE(lla, 0.2.2)
 
 # Checks for programs.
 AC_PROG_CXX
