@@ -145,7 +145,9 @@ string StageProfiPlugin::get_desc() const {
 "--- Config file : lla-stageprofi.conf ---\n"
 "\n"
 "device = /dev/ttyUSB0\n"
-"The device to use. Multiple devices are supported\n";
+"device = 192.168.1.250\n"
+"The device to use either as a part for the USB version or an IP address\n"
+"for the LAN version. Multiple devices are supported.\n";
 }
 
 
