@@ -1,3 +1,7 @@
+14/9/2007 lla-0.2.2
+  Fixed a bug with the DMX USB Pro
+  Refinements to the StageProfi plugin
+
 1/1/2007 lla-0.2.1
 
 	Added support for the Stage Profi widget
